Reduce gutter, increase column number of favorite artworks. Align public/private setting correctly.

--- a/apps/favorites_follows/stylesheets/favorites.styl
+++ b/apps/favorites_follows/stylesheets/favorites.styl
@@ -12,7 +12,8 @@
       margin 150px 0
   .favorites-actions
     position relative
-    margin 10px 0
+    margin 10px auto
+    width 1120px
     a
       text-decoration none
     .favorites-share
